temp fix for overflow flickering on iOS

--- a/src/app/components/main-page/main-page.component.sass
+++ b/src/app/components/main-page/main-page.component.sass
@@ -88,7 +88,7 @@ div#container
 
             & li:nth-child(1) div
                 position: relative
-                overflow: hidden
+                overflow: auto
 
                 &::before
                     content: ""
